tests complete checking coverage